@@ -2,6 +2,8 @@ Current svn: $Id$
 
 0.2.0
 
+- [google] Fix login recognition
+- [build] Adress AMO reviewers complaints
 * [build] Upload to AMO
 * [build] Bump version number
 
